Bug 495528 - Changes in the source column of an entry in the price update dialog are not saved
Summary: Changes in the source column of an entry in the price update dialog are not s...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-29 12:26 UTC by Ralf Habacker
Modified: 2024-11-17 09:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
test file (351.32 KB, application/x-kmymoney)
2024-10-29 12:27 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-10-29 12:26:50 UTC
STEPS TO REPRODUCE
1. download kmymoney snapshot from https://cdn.kde.org/ci-builds/office/kmymoney/master/
2. load appended file
3. In the extra menu open "update price" dialog
5. Select the source entry "BRL -> EUR"
6. choose a difference source from the list
7. press enter and leave the dialog with pressing the "OK" button
8. Reopen the "price update" dialog
9. Inspect the source column of the source entry "BRL -> EUR"

OBSERVED RESULT
The source columns has not not been updated to show the new source choosed at 6.

EXPECTED RESULT
The source column should show the new source, as the user may want to change the source for further updates.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.5
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Ralf Habacker 2024-10-29 12:27:55 UTC
Created attachment 175332 [details]
test file
Comment 2 Thomas Baumgart 2024-11-17 09:33:08 UTC
A price pair does not contain an assigned source. The actual price entry keeps the source which is taken here to fill the dialog. Since you did not update the price from the new source, this information is not stored on file.
Comment 3 Thomas Baumgart 2024-11-17 09:34:10 UTC
Git commit 491aff12f18d72dc51389e98adcdc9fd7199ef79 by Thomas Baumgart.
Committed on 17/11/2024 at 09:33.
Pushed by tbaumgart into branch 'master'.

Inform user about persistence behavior of setting
FIXED-IN: 5.2

M  +15   -2    kmymoney/dialogs/kequitypriceupdatedlg.cpp
M  +15   -0    kmymoney/dialogs/kequitypriceupdatedlg.ui

https://invent.kde.org/office/kmymoney/-/commit/491aff12f18d72dc51389e98adcdc9fd7199ef79