Inform user about persistence behavior of setting

BUG: 495528
FIXED-IN: 5.2